  Django (<=1.7, plus 1.9).

- Fix `#58`_: Delay saving new users as long as possible. This will allow
  :setting:`AUTH_LDAP_USER_ATTR_MAP` to populate required fields before creating
  a new Django user.

  ``LDAPBackend.get_or_create_user()`` is now
  :meth:`~django_auth_ldap.backend.LDAPBackend.get_or_build_user` to avoid
  confusion. The old name may still be overridden for now.

.. _#58: https://bitbucket.org/illocution/django-auth-ldap/issues/58/


1.2.16 - 2017-09-30 - Minor fixes
---------------------------------

- Fix `#86`_: Better cache key sanitizing.

- Improved handling of LDAPError. A case existed where the error would not get
  caught while loading group permissions.

.. _#86: https://bitbucket.org/illocution/django-auth-ldap/issues/86/


1.2.15 - 2017-08-17 - Documentation improvements
------------------------------------------------

- Fix `#83`_: Improved documentation for finding the official repository and
  contributing.

.. _#83: https://bitbucket.org/illocution/django-auth-ldap/issues/83/


1.2.14 - 2017-07-24 - User DN caching
-------------------------------------

- Fix `#82`_: Under search/bind mode, the user's DN will now be cached for
  performance.

.. _#82: https://bitbucket.org/illocution/django-auth-ldap/issues/82/


1.2.13 - 2017-06-19 - Selective group mirroring
-----------------------------------------------

- Support selective group mirroring with :setting:`AUTH_LDAP_MIRROR_GROUPS` and
  :setting:`AUTH_LDAP_MIRROR_GROUPS_EXCEPT`.

- Fix `#73`_: Work around Django 1.11 bug with multiple authentication backends.

.. _#73: https://bitbucket.org/illocution/django-auth-ldap/issues/73/


1.2.12 - 2017-05-20 - Complex group queries
-------------------------------------------

- Support for complex group queries via
  :class:`~django_auth_ldap.config.LDAPGroupQuery`.


1.2.11 - 2017-04-22 - Testing and debugging cleanup
---------------------------------------------------

- Some more descriptive object representations.
